Fixed the horizontal scroll on small screens

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -7,6 +7,7 @@
 
 body {
   font-family: var(--default-font-family);
+  overflow-x: hidden;
 }
 h1,
 h2,
