--- a/styles/work.css
+++ b/styles/work.css
@@ -7,7 +7,9 @@
 
 body {
   font-family: var(--default-font-family);
+  overflow-x: hidden;
 }
+
 h1,
 h2,
 h3,
@@ -18,6 +20,7 @@ h6 {
   font-family: var(--heading-font-family);
   font-weight: bold;
 }
+
 h1 {
   font-size: 96px;
 }
@@ -286,10 +289,10 @@ footer .social-links a:hover {
     text-align: center;
   }
 
-  .ms-5 {
-    font-size: 35px;
+  /* .ms-5 {
+    font-size: 30px;
     line-height: 1;
-  }
+  } */
   .section-image {
     margin-top: 30px;
     margin-left: -80px;
